cockroachdb: bump to java17
Jepsen tests timeout in the Analyzing step with OpenJDK-8 on the s390x
architecture. This patch bumps the java build version to Java 17 and
adds jaxb as a dependency as it was removed in Java 9.